<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true"
            tools:context=".ui.login.CreateAccountActivity">

    <LinearLayout
        android:id="@+id/linear_layout_create_account_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/create_account_logo_image"
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:contentDescription="@string/image_view_logo_image"
            android:src="@mipmap/ic_launcher"/>


        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            >

            <EditText
                android:id="@+id/edit_text_username_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_username"
                android:inputType="textCapWords"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin">

            <EditText
                android:id="@+id/edit_text_email_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal">

            <EditText
                android:id="@+id/edit_text_password_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_create_account_final"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:text="@string/title_activity_create_account"
            android:textSize="@dimen/login_buttons_text_size"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/text_already_have_account"/>

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:text="@string/button_sign_in"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold|italic"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>