<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <ImageView
            android:id="@+id/login_logo_image"
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:contentDescription="@string/image_view_logo_image"
            android:src="@mipmap/ic_launcher"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            >

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            >

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button_with_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:text="@string/button_signin_with_password"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_account"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:text="@string/button_create_account"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold|italic"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>